/*
 * MIT License
 *
 * Copyright (c) 2021 P2O-Lab <p2o-lab@mailbox.tu-dresden.de>,
 * Chair for Process Control Systems, Technische Universität Dresden
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

import {DataItem} from '../../../connection';
import {BaseDataAssemblyRuntime} from '../../DataAssemblyController';

export type InterlockRuntime = BaseDataAssemblyRuntime & {
	PermEn: DataItem<boolean>;
	Permit: DataItem<boolean>;
	IntlEn: DataItem<boolean>;
	Interlock: DataItem<boolean>;
	ProtEn: DataItem<boolean>;
	Protect: DataItem<boolean>;
};

export class Interlock{
	private dAController: any;

	constructor(dAController: any) {
		this.dAController = dAController;
		this.initialize();
	}

	private initialize(): void {
		this.dAController.communication.PermEn = this.dAController.createDataItem('PermEn', 'boolean');
		this.dAController.communication.Permit = this.dAController.createDataItem('Permit', 'boolean');
		this.dAController.communication.IntlEn = this.dAController.createDataItem('IntlEn', 'boolean');
		this.dAController.communication.Interlock = this.dAController.createDataItem('Interlock', 'boolean');
		this.dAController.communication.ProtEn = this.dAController.createDataItem('ProtEn', 'boolean');
		this.dAController.communication.Protect = this.dAController.createDataItem('Protect', 'boolean');
	}
}
